// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breakdown when data is loaded returns the transaction breakdown for a service 1`] = `
Object {
  "timeseries": Array [
    Object {
      "color": "#54b399",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 1,
        },
        Object {
          "x": 1600160100000,
          "y": 0.1875,
        },
        Object {
          "x": 1600160130000,
          "y": 0.2625,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.482758620689655,
        },
        Object {
          "x": 1600160220000,
          "y": 0.44,
        },
        Object {
          "x": 1600160250000,
          "y": 1,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.171428571428571,
        },
        Object {
          "x": 1600160340000,
          "y": 0.55,
        },
        Object {
          "x": 1600160370000,
          "y": 0.5,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.419642857142857,
        },
        Object {
          "x": 1600160460000,
          "y": 0.722222222222222,
        },
        Object {
          "x": 1600160490000,
          "y": 0.833333333333333,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0.11044776119403,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.15028901734104,
        },
        Object {
          "x": 1600160700000,
          "y": 0.380952380952381,
        },
        Object {
          "x": 1600160730000,
          "y": 0.0676156583629893,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.263736263736264,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0.529411764705882,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0.0120967741935484,
        },
        Object {
          "x": 1600160940000,
          "y": 0.261261261261261,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.160714285714286,
        },
        Object {
          "x": 1600161060000,
          "y": 0.0402684563758389,
        },
        Object {
          "x": 1600161090000,
          "y": 1,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0.0789473684210526,
        },
        Object {
          "x": 1600161180000,
          "y": 0.407407407407407,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0.666666666666667,
        },
        Object {
          "x": 1600161300000,
          "y": 0.821428571428571,
        },
        Object {
          "x": 1600161330000,
          "y": 1,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.173333333333333,
        },
        Object {
          "x": 1600161420000,
          "y": 0.142857142857143,
        },
        Object {
          "x": 1600161450000,
          "y": 0.85,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0.421052631578947,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0.0185185185185185,
        },
        Object {
          "x": 1600161690000,
          "y": 0.0625,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.367647058823529,
        },
        Object {
          "x": 1600161780000,
          "y": 0.105263157894737,
        },
      ],
      "hideLegend": false,
      "legendValue": "23%",
      "title": "app",
      "type": "areaStacked",
    },
    Object {
      "color": "#6092c0",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 0,
        },
        Object {
          "x": 1600160100000,
          "y": 0.71875,
        },
        Object {
          "x": 1600160130000,
          "y": 0.4875,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.413793103448276,
        },
        Object {
          "x": 1600160220000,
          "y": 0,
        },
        Object {
          "x": 1600160250000,
          "y": 0,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.628571428571429,
        },
        Object {
          "x": 1600160340000,
          "y": 0,
        },
        Object {
          "x": 1600160370000,
          "y": 0.5,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.4375,
        },
        Object {
          "x": 1600160460000,
          "y": 0,
        },
        Object {
          "x": 1600160490000,
          "y": 0,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0.88955223880597,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.705202312138728,
        },
        Object {
          "x": 1600160700000,
          "y": 0,
        },
        Object {
          "x": 1600160730000,
          "y": 0.871886120996441,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.67032967032967,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0.987903225806452,
        },
        Object {
          "x": 1600160940000,
          "y": 0.738738738738739,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.794642857142857,
        },
        Object {
          "x": 1600161060000,
          "y": 0.959731543624161,
        },
        Object {
          "x": 1600161090000,
          "y": 0,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0.921052631578947,
        },
        Object {
          "x": 1600161180000,
          "y": 0,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0,
        },
        Object {
          "x": 1600161300000,
          "y": 0,
        },
        Object {
          "x": 1600161330000,
          "y": 0,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.746666666666667,
        },
        Object {
          "x": 1600161420000,
          "y": 0.857142857142857,
        },
        Object {
          "x": 1600161450000,
          "y": 0,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0.578947368421053,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0.981481481481482,
        },
        Object {
          "x": 1600161690000,
          "y": 0.9375,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.558823529411765,
        },
        Object {
          "x": 1600161780000,
          "y": 0.894736842105263,
        },
      ],
      "hideLegend": false,
      "legendValue": "68%",
      "title": "http",
      "type": "areaStacked",
    },
    Object {
      "color": "#d36086",
      "data": Array [
        Object {
          "x": 1600159980000,
          "y": null,
        },
        Object {
          "x": 1600160010000,
          "y": null,
        },
        Object {
          "x": 1600160040000,
          "y": null,
        },
        Object {
          "x": 1600160070000,
          "y": 0,
        },
        Object {
          "x": 1600160100000,
          "y": 0.09375,
        },
        Object {
          "x": 1600160130000,
          "y": 0.25,
        },
        Object {
          "x": 1600160160000,
          "y": null,
        },
        Object {
          "x": 1600160190000,
          "y": 0.103448275862069,
        },
        Object {
          "x": 1600160220000,
          "y": 0.56,
        },
        Object {
          "x": 1600160250000,
          "y": 0,
        },
        Object {
          "x": 1600160280000,
          "y": null,
        },
        Object {
          "x": 1600160310000,
          "y": 0.2,
        },
        Object {
          "x": 1600160340000,
          "y": 0.45,
        },
        Object {
          "x": 1600160370000,
          "y": 0,
        },
        Object {
          "x": 1600160400000,
          "y": null,
        },
        Object {
          "x": 1600160430000,
          "y": 0.142857142857143,
        },
        Object {
          "x": 1600160460000,
          "y": 0.277777777777778,
        },
        Object {
          "x": 1600160490000,
          "y": 0.166666666666667,
        },
        Object {
          "x": 1600160520000,
          "y": null,
        },
        Object {
          "x": 1600160550000,
          "y": null,
        },
        Object {
          "x": 1600160580000,
          "y": 0,
        },
        Object {
          "x": 1600160610000,
          "y": null,
        },
        Object {
          "x": 1600160640000,
          "y": null,
        },
        Object {
          "x": 1600160670000,
          "y": 0.144508670520231,
        },
        Object {
          "x": 1600160700000,
          "y": 0.619047619047619,
        },
        Object {
          "x": 1600160730000,
          "y": 0.0604982206405694,
        },
        Object {
          "x": 1600160760000,
          "y": null,
        },
        Object {
          "x": 1600160790000,
          "y": 0.0659340659340659,
        },
        Object {
          "x": 1600160820000,
          "y": null,
        },
        Object {
          "x": 1600160850000,
          "y": 0.470588235294118,
        },
        Object {
          "x": 1600160880000,
          "y": null,
        },
        Object {
          "x": 1600160910000,
          "y": 0,
        },
        Object {
          "x": 1600160940000,
          "y": 0,
        },
        Object {
          "x": 1600160970000,
          "y": null,
        },
        Object {
          "x": 1600161000000,
          "y": null,
        },
        Object {
          "x": 1600161030000,
          "y": 0.0446428571428571,
        },
        Object {
          "x": 1600161060000,
          "y": 0,
        },
        Object {
          "x": 1600161090000,
          "y": 0,
        },
        Object {
          "x": 1600161120000,
          "y": null,
        },
        Object {
          "x": 1600161150000,
          "y": 0,
        },
        Object {
          "x": 1600161180000,
          "y": 0.592592592592593,
        },
        Object {
          "x": 1600161210000,
          "y": null,
        },
        Object {
          "x": 1600161240000,
          "y": null,
        },
        Object {
          "x": 1600161270000,
          "y": 0.333333333333333,
        },
        Object {
          "x": 1600161300000,
          "y": 0.178571428571429,
        },
        Object {
          "x": 1600161330000,
          "y": 0,
        },
        Object {
          "x": 1600161360000,
          "y": null,
        },
        Object {
          "x": 1600161390000,
          "y": 0.08,
        },
        Object {
          "x": 1600161420000,
          "y": 0,
        },
        Object {
          "x": 1600161450000,
          "y": 0.15,
        },
        Object {
          "x": 1600161480000,
          "y": null,
        },
        Object {
          "x": 1600161510000,
          "y": 0,
        },
        Object {
          "x": 1600161540000,
          "y": null,
        },
        Object {
          "x": 1600161570000,
          "y": null,
        },
        Object {
          "x": 1600161600000,
          "y": null,
        },
        Object {
          "x": 1600161630000,
          "y": null,
        },
        Object {
          "x": 1600161660000,
          "y": 0,
        },
        Object {
          "x": 1600161690000,
          "y": 0,
        },
        Object {
          "x": 1600161720000,
          "y": null,
        },
        Object {
          "x": 1600161750000,
          "y": 0.0735294117647059,
        },
        Object {
          "x": 1600161780000,
          "y": 0,
        },
      ],
      "hideLegend": false,
      "legendValue": "9.3%",
      "title": "postgresql",
      "type": "areaStacked",
    },
  ],
}
`;

exports[`Breakdown when data is loaded returns the transaction breakdown for a transaction group 9`] = `
Array [
  Object {
    "x": 1600159980000,
    "y": null,
  },
  Object {
    "x": 1600160010000,
    "y": null,
  },
  Object {
    "x": 1600160040000,
    "y": null,
  },
  Object {
    "x": 1600160070000,
    "y": null,
  },
  Object {
    "x": 1600160100000,
    "y": 1,
  },
  Object {
    "x": 1600160130000,
    "y": 1,
  },
  Object {
    "x": 1600160160000,
    "y": null,
  },
  Object {
    "x": 1600160190000,
    "y": 1,
  },
  Object {
    "x": 1600160220000,
    "y": null,
  },
  Object {
    "x": 1600160250000,
    "y": null,
  },
  Object {
    "x": 1600160280000,
    "y": null,
  },
  Object {
    "x": 1600160310000,
    "y": 1,
  },
  Object {
    "x": 1600160340000,
    "y": null,
  },
  Object {
    "x": 1600160370000,
    "y": 1,
  },
  Object {
    "x": 1600160400000,
    "y": null,
  },
  Object {
    "x": 1600160430000,
    "y": 1,
  },
  Object {
    "x": 1600160460000,
    "y": null,
  },
  Object {
    "x": 1600160490000,
    "y": null,
  },
  Object {
    "x": 1600160520000,
    "y": null,
  },
  Object {
    "x": 1600160550000,
    "y": null,
  },
  Object {
    "x": 1600160580000,
    "y": 1,
  },
  Object {
    "x": 1600160610000,
    "y": null,
  },
  Object {
    "x": 1600160640000,
    "y": null,
  },
  Object {
    "x": 1600160670000,
    "y": 1,
  },
  Object {
    "x": 1600160700000,
    "y": null,
  },
  Object {
    "x": 1600160730000,
    "y": 1,
  },
  Object {
    "x": 1600160760000,
    "y": null,
  },
  Object {
    "x": 1600160790000,
    "y": 1,
  },
  Object {
    "x": 1600160820000,
    "y": null,
  },
  Object {
    "x": 1600160850000,
    "y": null,
  },
  Object {
    "x": 1600160880000,
    "y": null,
  },
  Object {
    "x": 1600160910000,
    "y": 1,
  },
  Object {
    "x": 1600160940000,
    "y": 1,
  },
  Object {
    "x": 1600160970000,
    "y": null,
  },
  Object {
    "x": 1600161000000,
    "y": null,
  },
  Object {
    "x": 1600161030000,
    "y": 1,
  },
  Object {
    "x": 1600161060000,
    "y": 1,
  },
  Object {
    "x": 1600161090000,
    "y": null,
  },
  Object {
    "x": 1600161120000,
    "y": null,
  },
  Object {
    "x": 1600161150000,
    "y": 1,
  },
  Object {
    "x": 1600161180000,
    "y": null,
  },
  Object {
    "x": 1600161210000,
    "y": null,
  },
  Object {
    "x": 1600161240000,
    "y": null,
  },
  Object {
    "x": 1600161270000,
    "y": null,
  },
  Object {
    "x": 1600161300000,
    "y": null,
  },
  Object {
    "x": 1600161330000,
    "y": null,
  },
  Object {
    "x": 1600161360000,
    "y": null,
  },
  Object {
    "x": 1600161390000,
    "y": 1,
  },
  Object {
    "x": 1600161420000,
    "y": 1,
  },
  Object {
    "x": 1600161450000,
    "y": null,
  },
  Object {
    "x": 1600161480000,
    "y": null,
  },
  Object {
    "x": 1600161510000,
    "y": 1,
  },
  Object {
    "x": 1600161540000,
    "y": null,
  },
  Object {
    "x": 1600161570000,
    "y": null,
  },
  Object {
    "x": 1600161600000,
    "y": null,
  },
  Object {
    "x": 1600161630000,
    "y": null,
  },
  Object {
    "x": 1600161660000,
    "y": 1,
  },
  Object {
    "x": 1600161690000,
    "y": 1,
  },
  Object {
    "x": 1600161720000,
    "y": null,
  },
  Object {
    "x": 1600161750000,
    "y": 1,
  },
  Object {
    "x": 1600161780000,
    "y": 1,
  },
]
`;
